--- a/custom.css
+++ b/custom.css
@@ -15,6 +15,19 @@ body {
   width: 6.5rem;
 }
 
+.read-btn {
+  background-color: #e76f51;
+  color: white;
+  font-weight: 700;
+  width: 8rem;
+}
+
+.btn-transparent {
+  background: transparent;
+  border: 1px solid #e76f51;
+  color: #e76f51;
+}
+
 hr {
   border: 1px solid #e76f51;
   width: 100px;
@@ -22,4 +35,8 @@ hr {
 
 .grayscale img {
   filter: grayscale(100%);
+}
+
+i {
+  color: #e76f51;
 }
